[package]
name = "yew-webgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.87"
log = "0.4.19"
wasm-logger = "0.2.0"
js-sys = "0.3.63"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]